<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="spinner">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
    <string-array name="conversation">
        <item> Hi, May!</item>
        <item> Hi, Jose!</item>
        <item>Do you want to draw a picture together?</item>
        <item>Sure! I only have a few crayons, though!</item>
        <item>Okay</item>
        <item>Great. Student find some markers crayons or colored pencils that I can use and  take a picture of them.</item>
        <item> Then find some others that I can use and take a picture of them.</item>
        <item>Then take a picture of them all together and see how many we have in total! </item>


    </string-array>
    <string name="app_name">Quetzal</string>
    <string name="hello_world">Hello world!</string>
    <string name="t1">Jose: Hi, May!</string>
    <string name="t2"> May: Hi, Jose! </string>
    <string name="t3">Jose: Do you want to draw a picture together? </string>
    <string name="t4">May: Sure! I only have a few crayons, though! </string>
    <!--<string name="t5">Jose: Okay, let's each find some things to draw with and put them together to share. </string>-->
    <string name="t6">May: Great. Student, find some markers, crayons, or colored pencils that I can use and  take a picture of them. </string>
    <string name="t7">Jose. Then find some others that I can use and take a picture of them. </string>
    <string name="t8">Then take a picture of them all together and see how many we have in total! </string>


    <string name="menu_settings">Settings</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="capture_camera">Capture From Camera</string>
    <string name="msg_enter_text_to_draw">Please enter text</string>
    <string name="msg_tap_image">Please tap on image to type text.</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="msg_please_wait">Please wait ...</string>
    <string name="title_activity_touch_inside">Touch_inside</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="reset">Reset</string>
    <string name="purge">Purge DB</string>
    <string name="recognize">Recognize</string>
    <string name="about">"About"</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help">This app demonstrates the principle of the naive Bayes classifier.\n If it is the first time you use this app, its database is empty and you should teach it some samples.\n 1. Write a digit on the screen and touch the corresponding button to let the app learn a sample.\n 2. After the app learns some samples, you can write a digit and touch \"Recognize\" to let the app tell you which digit you have written.\n 3. Let the app learn more samples and you will see: The more samples it learns, the cleverer it will be.</string>
    <string name="confirm_purge">Purge the database?</string>
    <string name="learn_sample">Thank you!\nYou have taught me a sample and I have learned it.</string>
    <string name="result">Result:</string>
    <string name="po_list">The probabilities of each digit are listed below:</string>
    <string name="title_activity_question">question</string>
    <string name="title_activity_camera1">CameraActivity1</string>

    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>

    <string-array name="operator">
        <item>+</item>
        <item>-</item>
        <item>x</item>
        <item>/</item>
    </string-array>
    <string name="title_activity_conversation">conversation</string>

</resources>