<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quetzal.Activities.question"
    android:background="#f7e7ed">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/layout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l1">

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/t1"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l2">

                <TextView
                    android:text="@string/t2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_alignParentRight="false"
                    android:layout_marginLeft="110dp"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l3">

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/t3"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l4">

                <TextView
                    android:text="@string/t4"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_alignParentRight="false"
                    android:layout_marginLeft="110dp"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView44"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l5">

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_weight="1" />

                <TextView
                    android:text="Jose: Okay, let's each find some things to draw with and put them together to share."
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/textView18" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l6">

                <TextView
                    android:text="@string/t6"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_alignParentRight="false"
                    android:layout_marginLeft="110dp"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/textView22"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l7">

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/t7"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/textview"
                    android:layout_weight="1" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/textView23" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l8">

                <TextView
                    android:text="@string/t8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text"
                    android:background="@drawable/textview" />
            </LinearLayout>

            <Button
                android:text="Start!"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:background="@drawable/view" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
